force-app/main/default/objects/ItemPromocao__c/ItemPromocao__c.object-meta.xml
<CustomObject>
    <label>Item da Promoção</label>
    <nameField>
        <displayFormat>ITP-{000000}</displayFormat>
        <label>Item da Promoção</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Itens da Promoções</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>