force-app/main/default/objects/ItemPromocao__c/fields/DescontoUnitario__c.field-meta.xml
<CustomField>
    <fullName>DescontoUnitario__c</fullName>
    <label>Desconto Unitário</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>