force-app/main/default/objects/ItemPromocao__c/fields/PercDesconto__c.field-meta.xml
<CustomField>
    <fullName>PercDesconto__c</fullName>
    <label>% Desconto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>