force-app/main/default/objects/ItemPromocao__c/fields/Promocao__c.field-meta.xml
<CustomField>
    <fullName>Promocao__c</fullName>
    <label>Promoção</label>
    <referenceTo>CodigoPromocional__c</referenceTo>
    <relationshipLabel>Itens da Promoção</relationshipLabel>
    <relationshipName>ItensPromocoes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>