force-app/main/default/objects/ItemPromocao__c/fields/QuantidadeMaxima__c.field-meta.xml
<CustomField>
    <fullName>QuantidadeMaxima__c</fullName>
    <label>Quantidade Máxima</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>