force-app/main/default/objects/ItemPromocao__c/fields/QuantidadeMinima__c.field-meta.xml
<CustomField>
    <fullName>QuantidadeMinima__c</fullName>
    <label>Quantidade Mínima</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>