force-app/main/default/objects/ItemPromocao__c/validationRules/PreenchimentoExclusivoDesconto.validationRule-meta.xml
<ValidationRule>
    <fullName>PreenchimentoExclusivoDesconto</fullName>
    <active>true</active>
    <errorConditionFormula>AND(DescontoUnitario__c != 0, PercDesconto__c != 0)</errorConditionFormula>
    <errorMessage>Preencher somente o % Desconto ou o Valor de desconto Unitário!</errorMessage>
</ValidationRule>